# remote-bot

./: .gitignore  Cargo.toml  flake.nix  shell.nix
src/: configuration.rs  constants.rs  main.rs
src/commands/: alarm.rs  mod.rs  ping.rs  wallpaper.rs
src/commands/util/: email.rs
