[package]
name = "remote-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1.0"
config = "0.14.0"
lettre = "0.11.8"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = "1.0.210"
serenity = { version = "0.12.2", features = [ "client", "collector", "unstable_discord_api", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"
warp = "0.3.7"
